# wavpack-rs

wavpack/: Cargo.toml
wavpack-sys/: Cargo.toml
wavpack/src/: writer.rs
